fixed bugs and improve its functionalities